fixing background image on iOS devices pt.2

--- a/styles.css
+++ b/styles.css
@@ -257,7 +257,7 @@ h1 > svg{
   position: absolute;
   width: 100%; 
   height: 100%;
-  min-height: 88vh;
+  min-height: 100vh;
   background-image: url(https://arc.net/noise-light.png);
   mix-blend-mode: screen;
   pointer-events: none; 
